maybe not working after all

--- a/templates/galaxy/config/tool_conf_interactive.xml.j2
+++ b/templates/galaxy/config/tool_conf_interactive.xml.j2
@@ -1,5 +1,7 @@
 <toolbox monitor="true">
     <section id="interactivetools" name="Interactive Tools">
+        <tool file="interactive/interactivetool_ttyd.xml" />
         <tool file="interactive/interactivetool_ethercalc.xml" />
+	<tool file="interactive/interactivetool_askomics.xml" />
     </section>
 </toolbox>
