--- a/templates/galaxy/config/job_conf.xml.j2
+++ b/templates/galaxy/config/job_conf.xml.j2
@@ -1,11 +1,10 @@
 <job_conf>
     <plugins workers="4">
         <plugin id="local" type="runner" load="galaxy.jobs.runners.local:LocalJobRunner"/>
-	<param id="pulsar_config">/srv/galaxy/config/pulsar_app.yml</param>
     </plugins>
     <destinations default="local">
         <destination id="local" runner="local"/>
-	<destination id="interactive_local" runner="pulsar_embedded">
+	<destination id="interactive_local" runner="local">
             <param id="docker_enabled">true</param>
             <param id="docker_volumes">$defaults</param>
             <param id="docker_sudo">false</param>
@@ -13,11 +12,11 @@
             <param id="docker_auto_rm">true</param>
             <param id="docker_set_user"></param>
             <param id="require_container">true</param>
-            <param id="container_monitor_result">callback</param>
-            <env id="REQUESTS_CA_BUNDLE">/etc/ssl/certs/ca-certificates.crt</env>	    
 	</destination>
     </destinations>
     <tools>
+        <tool destination="interactive_local" id="interactive_tool_ttyd" />
         <tool destination="interactive_local" id="interactive_tool_ethercalc" />
+	<tool destination="interactive_local" id="interactive_tool_askomics" />
     </tools>
 </job_conf>
